# modeshift_django

./: .bandit  .dockerignore  .env.backup.20250901_033342  .env.backup.20250906_120141  .env.backup.production  .env.py  .flake8  .gitignore  API_KEYS_SECURITY.md  BRANCHING_STRATEGY.md  CI_CD_FIX_REPORT.md  CI_CD_REPORT.md  CI_CD_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.china  ENVIRONMENT_SETUP_GUIDE.md  FINAL_SUCCESS_REPORT.md  GITHUB_SECRETS_CONFIG.md  LOCAL_CICD_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  SECURITY_FIX_GUIDE.md  SECURITY_FIX_REPORT.md  SSH_FIX_REPORT.md  WORKFLOW_STATUS_REPORT.md  asgi.py  backup.sh  bandit-report.json  bandit_report.json  calendar_feature_guide.txt  check-workflow-status.sh  clash_config_youtube_optimized.yaml  coverage.xml  date_test.html  db_docker_build.sqlite3  deploy-aliyun.sh  deploy-ci.sh  deploy.sh  deployment-commands.md  (+56 more)
.cursor/rules/: README.md  ai-programming-rules.mdc  api-keys-security.mdc  cicd-deployment.mdc  coding-standards.mdc  django-patterns.mdc  html-css.mdc  javascript-typescript.mdc  language-specific.mdc  project-structure.mdc  python-specific.mdc  shell-scripts.mdc  testing-standards.mdc  yaml-json.mdc
.github/: CI_CD_GUIDE.md  ENTERPRISE_SECRETS_SETUP.md  SECRETS_SETUP.md
.github/workflows/: ci-cd.yml  unified-ci-cd.yml
QAToolBox/: celery.py
apps/content/: __init__.py  admin.py  forms.py  models.py  urls.py  utils.py  views.py  views_admin_features.py  views_health.py
apps/share/: __init__.py  apps.py  models.py  urls.py  utils.py  views.py
apps/tools/: admin.py  admin_nutrition.py  apps.py  async_task_manager.py  async_test_cases_api.py  celery.py  consumers.py  fitness_nutrition_views.py  fitness_tools_views.py  generate_redbook_api.py  generate_test_cases_api.py  guitar_training_views.py  ip_defense.py  legacy_views.py  monitoring_views.py  pdf_converter_api.py  performance.py  proxy_view.py  routing.py  serializers.py  simple_test_api.py  tasks.py  urls.py  urls.py.backup
apps/users/: admin.py  forms.py  middleware.py  models.py  security.py  signals.py  urls.py  views.py
clash_embedded/: config.yaml
config/: deploy_aliyun_offline.sh
config/settings/: aliyun.py  aliyun_production.py  base.py  development.py  docker_build.py  docker_minimal.py  docker_production.py  fixed_prod.py  local.py  production.py  production_complete.py  production_simple.py  test_minimal.py  testing.py
middleware/: cors_headers.py  performance.py
monitoring/: health_check.py  sentry.py
quality-reports/: bandit-report.json  complexity-analysis.txt  lines-of-code.txt  mypy-report.xml
requirements/: audio_processing.txt  audio_processing_py312.txt  base.txt  dev.txt  development.txt  optional.txt  production.txt  requirements.txt  testing.txt
scripts/: deployment_verification.py  post_deployment_verification.py
src/static/: base.css  cyberpunk.css  emo.css  geek.css  life.css  modern-ui.css  progressive_diary.css  punk.css  rage.css  responsive.css
static/: test_clash_dashboard.html
static/js/: chat_enhanced.js  enhanced_training_plan_editor.js  fix_user_menu_force.js  session_manager.js  share.js  simple_drag_test.js  theme_manager.js  training_plan_editor.js
task_storage/: tasks.json
templates/: base.html  fun_collect.html  home.html  modern_demo.html  theme_demo.html  tool.html  version_history.html  welcome.html
templates/content/: admin_announcements.html  admin_dashboard.html  admin_dashboard_enhanced.html  admin_feature_management.html  admin_feedback.html  admin_food_photo_binding.html  admin_suggestions.html  admin_user_feature_access.html  ai_links.html  article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
templates/share/: create_link.html  dashboard.html  widget.html
templates/tools/: achievement_dashboard.html  active_chat_rooms.html  admin_feature_management.html  anti_programmer_profile.html  async_test_case_generator.html  audio_converter.html  base_tool.html  based_dev_avatar.html  (+100 more)
test-results/: test-report.html  test-results.xml
tests/: __init__.py  conftest.py  conftest_simple.py
utils/: alert_system.py  crawler.py  database_optimizer.py
(+294 files in other folders)
